--- a/estilos/estilo-fase1.css
+++ b/estilos/estilo-fase1.css
@@ -3,23 +3,49 @@
   flex-direction: row;
 }
 
-#gameCanvas {
-  border: 1px solid #000;
-  background-color: white;
-  background-image: 
-  linear-gradient(lightgray 1px, transparent 1px),
-  linear-gradient(90deg, lightgray 1px, transparent 1px);
-  background-size: 20px 20px;
-  background-repeat: repeat;
-  width: 500px;
-  height: 400px;
-  border-radius: 10px;
-  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
+/*Ajuste para zoom de 50%*/
+@media (max-width: 1200px) {
+  #gameCanvas {
+    width: 500px;
+    height: 400px;
+    background: white;
+    border: 1px solid black;
+    border-radius: 10px;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
+    background-color: white;
+    background-image: linear-gradient(lightgray 3px, transparent 3px), linear-gradient(90deg, lightgray 3px, transparent 3px);
+    background-size: 20px 20px;
+    background-repeat: repeat;
+  }
 }
 
-.orientaçao {
+/*Ajuste para zoom de 100%*/
+@media (min-width: 1201px) {
+  #gameCanvas {
+    width: 500px;
+    height: 400px;
+    background: white;
+    border: 1px solid black;
+    border-radius: 10px;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
+    background-color: white;
+    background-image: linear-gradient(gray 1px, transparent 1px), linear-gradient(90deg, gray 1px, transparent 1px);
+    background-size: 20px 20px;
+    background-repeat: repeat;
+  }
+}
+
+canvas {
+  cursor: default;
+}
+
+canvas:active {
+  cursor: pointer;
+}
+
+.orientacao {
   display: flex;
-  flex-direction: column;
+  flex-direction: line;
   align-items: flex-start;
   margin-right: auto;
   padding: 25px;
@@ -29,7 +55,7 @@
   height: 430px;
 }
 
-.orientaçao button {
+.orientacao button {
   width: 200px;
   height: 25px;
   margin-bottom: 10px;
@@ -43,12 +69,12 @@
   transition: 0.2s, background-color 0.3s;
 }
 
-.orientaçao button:hover {
+.orientacao button:hover {
   background-color: lightgreen;
   transform: scale(1.1);
 }
 
-.orientaçao button:active {
+.orientacao button:active {
   transform: scale(0.95);
 }
 
@@ -93,7 +119,7 @@ h4, ol, ul, li {
   transform: scale(0.95);
 }
 
-.draggable{
+.draggable {
   display: flex;
   flex-direction: column;
   align-items: flex-start;
@@ -101,14 +127,6 @@ h4, ol, ul, li {
   margin-right: 15px;
   margin-top: 1px;
   padding: 1px;
-}
-
-canvas {
-  cursor: default;
-}
-
-canvas:active {
-  cursor: pointer;
 }
 
 #sidebar {
@@ -122,7 +140,7 @@ canvas:active {
     object-fit: cover; /* Ajusta a imagem para caber dentro do contêiner */ 
 }
 
-.pincel{
+.pincel {
   width: 30px; /* Ajusta a largura da imagem */
   height: 30px; /* Ajusta a altura da imagem */
 }
@@ -139,9 +157,9 @@ canvas:active {
   margin-top: 20px;
 }
 
-#tela{
+#tela {
   display: flex;
-  flex-direction: column;
+  flex-direction: line;
   align-items: center;
   margin-left: 10px;
   margin-bottom: 10px;
@@ -152,7 +170,7 @@ canvas:active {
   height: 420px;
 }
 
-.icon{
+.icon {
   width: 50px;
   height: 50px;
 }
@@ -170,18 +188,12 @@ canvas:active {
 }
 
 .controls1 button {
-  width: 200px;
-  height:35px;
-  align-items: flex-start;
+  height: 35px;
   padding: 5px;
   margin-bottom: 5px;
-  font-size: 16px; 
-  cursor: pointer; 
-  border: outset 5px yellow;   
-  border-radius: 5px;
-  background: linear-gradient(45deg,#b3b7a5 10%, #c9f054 30%, #30382b 70%, #c05d20);
+  border: outset yellow;
+  background: linear-gradient(45deg,#b3b7a5 15%,#c9f054 35%,#30382b 75%,#c05d20 4%);
   color: white;
-  transition: 0.2s;  
 }
 
 .controls1 button:hover {
@@ -193,17 +205,17 @@ canvas:active {
   transform: scale(0.95);
 }
 
-#p-texto{
+#p-texto {
   text-align: justify;
-  font-size:14px;
+  font-size: 14px;
   padding: 1px;
   margin-top: 1px;
 }
 
-#questao,#questao1,#questao3 ul, li {
+#questao, #questao1, #questao3 ul, li {
   margin-left: 15px;
   text-align: justify;
-  font-size:15px;
+  font-size: 15px;
   padding: 1px;
   margin-top: 1px;
 }
@@ -217,6 +229,7 @@ canvas:active {
   border-radius: 10px;
   width: 300px;
   height: 200px; 
+  font-size: 20px;
 }
 
 .mensagem-texto {
@@ -228,6 +241,7 @@ canvas:active {
   width: 300px;
   height: 200px;
   text-align: center;
+  font-size: 15px;
 }
 
 .color-table {
@@ -261,9 +275,9 @@ canvas:active {
 }
 
 #t-bem {
-  margin: 10px;
+  margin-left: 10px;
   font-size: 24px;
-  text-align: center;
+  text-align: left;
   color: transparent;
   background-clip: text;
   background-color: hsl(34, 53%, 82%);
@@ -290,17 +304,18 @@ canvas:active {
 }
 
 .mensagem-vermelha {
-  color:red;
+  color: red;
+  font-size: 20px;
 }
 
 .mensagem-white {
-  font-size: 28px;
-    color: white;
-    text-shadow: #0b1284;
+  font-size: 20px;
+  color: white;
+  text-shadow: #0b1284;
 }
 
 .mensagem-azul {
-  font-size: 28px;
+  font-size: 20px;
   color: rgb(141, 159, 192);
 }
 
@@ -314,23 +329,32 @@ canvas:active {
   animation: blink 1s infinite;
 }
 
-#t-jogo{
-  margin: 15px 35px;
+#t-jogo {
+  font-size: 13.5px;
+  margin-top: 15px;
+  margin-left: 0px;
 }
 
 .mensagensDiv1 {
   background-color: transparent;
   color: white;
   padding: 20px;
-  margin: 20px;
-  border-radius: 10px;
-  width: 300px;
+  margin-left: 2px;
+  border-radius: 30px;
+  width: 100px;
   height: 200px; 
+  font-size: 20px;
 }
 
-.mensagemTexto{
-  align-items: columm;
-
+.mensagemTexto {
+  align-items: column;
+  font-size: 15px;
+  width: 100px;
+  height: 100px;
+  border-radius: 20px;
 }
 
-
+.msgDiv {
+  font-size: 15px;
+  border-radius: 20px;
+}
