--- a/estilos/estilos-comuns.css
+++ b/estilos/estilos-comuns.css
@@ -1,3 +1,195 @@
+
+/* Ajuste de zoom para 50% */
+@media (max-width: 1200px) {
+  body {
+    zoom: 0.5;
+  }
+}
+
+/* Ajuste de zoom para 100% */
+@media (min-width: 1201px) {
+  body {
+    zoom: 1;
+  }
+}
+
+/* Ajuste de zoom para 50% */
+@media (max-width: 1200px) {
+  #game-container {
+    flex-direction: line;
+  }
+}
+
+/* Ajuste de zoom para 100% */
+@media (min-width: 1201px) {  
+  #game-container {
+    margin-bottom: 2px;
+    flex-direction: line;
+  }
+}
+
+/* Ajuste de zoom para 50% */
+@media (max-width: 1200px) {  
+  .orientacao {
+    margin-top: 2px;
+    margin-bottom: 2px;
+    margin-right: 1.25rem;
+    padding: 3%;
+    width: 100%;
+    height: 200%;
+  }
+}
+
+/* Ajuste de zoom para 100% */
+@media (min-width: 1201px) {  
+  .orientacao {
+    margin-top: 5px;
+    margin-right: 1.25rem;
+    padding: 3%;
+    width: 100%;
+    height: 200%;
+  }
+}
+
+/* Ajuste de zoom para 50% */
+@media (max-width: 1200px) {  
+  #img {
+    width: 100%;
+    height: 100%;
+  }
+}
+
+/* Ajuste de zoom para 100% */
+@media (min-width: 1201px) { 
+  #img {
+    width: 100%;
+    height: 100%;
+  }
+}
+
+/* Ajuste de zoom para 50% */
+@media (max-width: 1200px) {   
+  #i2 {
+    padding-bottom: 15px;
+    margin-top: 20rem;
+    width: 50%;
+    height: 70%;
+  }
+}
+
+/* Ajuste de zoom para 100% */
+@media (min-width: 1201px) {
+  #i2 {
+    padding-bottom: 15px;
+    width: 50%;
+    height: 70%;
+    margin-top: 20rem;
+  }
+}
+
+/* Ajuste de zoom para 50% */
+@media (max-width: 1200px) {
+  footer {
+    margin-top: 1px;
+    font-size: 35px;
+    zoom: 0.5;
+  }
+}
+
+/* Ajuste de zoom para 100% */
+@media (min-width: 1201px) {
+  footer {
+    margin-top: 1px;
+    margin-bottom: 20px;
+    font-size: 20px;
+    zoom: 1;
+  }
+}
+
+/* Controles */
+/* Ajuste de zoom para 50% */
+@media (max-width: 1200px) {
+.controls2 {
+  display: flex;
+  flex-direction: row;
+  align-items: flex-start;
+  margin-top: auto;
+  margin-left: 1.5625rem;
+  margin-right: 1.5625rem;
+  padding: 0.625rem;
+  border: solid outset 0.3125rem #ccc;
+  background-color: transparent;
+}
+}
+
+/* Ajuste de zoom para 100% */
+@media (min-width: 1201px) {
+  .controls2 {
+    margin: 100%;
+    align-items: center;
+    flex-direction: line;
+    margin-left: 0.625rem;
+    margin-right: 0.625rem;
+  }
+}
+
+.controls2 button {
+  width: 11.25rem;
+  height: 2.5rem;
+  margin-top: auto;
+  justify-content: center;
+  align-items: center;
+  text-align: center;
+  margin-bottom: 0.3125rem;
+  padding: 1.25rem;
+  font-size: 1rem;
+  cursor: pointer;
+  border: outset 0.3125rem rgb(151, 151, 181);
+  border-radius: 0.3125rem;
+  background: linear-gradient(
+    45deg,
+    #006782 40%,
+    #0b1284 50%,
+    #760ea1 60%,
+    #83096e
+  );
+  color: white;
+  transition: 0.2s;
+}
+
+.controls2 button:hover {
+  background-color: lightseagreen;
+  transform: scale(1.1);
+}
+
+.controls2 button:active {
+  transform: scale(0.95);
+}
+
+/* Texto especial */
+#tbem {
+  margin: 0.3125rem;
+  font-size: 1.5rem;
+  text-align: center;
+  color: transparent;
+  background-clip: text;
+  background-color: hsl(34, 53%, 82%);
+  background-image: repeating-linear-gradient(
+    45deg,
+    #d7dd60 0%,
+    #e4f52a 20%,
+    #f3a322 30%,
+    #f5511b 40%,
+    #230f07 50%,
+    #37094a 60%,
+    #83096e 70%,
+    #840b2a 80%,
+    #623c59 90%,
+    #ef0a0a 100%
+  );
+  text-shadow: 0.125rem 0.125rem 0.25rem rgba(0, 0, 0, 0.5);
+}
+
 body {
   margin-bottom: 2px;
   margin-top: 2px;
@@ -86,7 +278,7 @@ header {
 
 footer {
   margin-top: 2px;
-  margin-bottom: 50px;
+  margin-bottom: 40px;
   padding: 2px;
   background: radial-gradient(
         rgba(255, 255, 255, 0) 0,
@@ -192,6 +384,7 @@ legend {
 }
 
 .paint-button .icon {
+  margin: 2px;
   padding-top: 0px;
   padding-right: 25px;
   padding-left: 5px;
@@ -207,7 +400,7 @@ legend {
 
 h1 {
   margin-top: 1px;
-  font-size: 40px;
+  font-size: 38px;
   padding: 2px;
   color: white;
   filter: drop-shadow(10px 10px 2px gray);
@@ -219,3 +412,4 @@ h1:hover {
   animation: spin 5s linear infinite;
   border-radius: 40%;
 }
+
