--- a/estilos/estilo-fase1.css
+++ b/estilos/estilo-fase1.css
@@ -3,7 +3,7 @@
   flex-direction: row;
 }
 
-/*Ajuste para zoom de 50%*/
+/* Ajuste para zoom de 50% */
 @media (max-width: 1200px) {
   #gameCanvas {
     width: 500px;
@@ -13,13 +13,14 @@
     border-radius: 10px;
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
     background-color: white;
-    background-image: linear-gradient(lightgray 3px, transparent 3px), linear-gradient(90deg, lightgray 3px, transparent 3px);
-    background-size: 20px 20px;
+    background-image: linear-gradient(lightgray 1px, transparent 1px), linear-gradient(90deg, lightgray 1px, transparent 1px);
+    background-size: 1px 1px; /* Reduz o tamanho da malha para maior densidade */
     background-repeat: repeat;
   }
 }
 
-/*Ajuste para zoom de 100%*/
+
+/* Ajuste para zoom de 100% */
 @media (min-width: 1201px) {
   #gameCanvas {
     width: 500px;
@@ -305,28 +306,45 @@ h4, ol, ul, li {
 
 .mensagem-vermelha {
   color: red;
-  font-size: 20px;
+  font-size: 30px;
+  text-shadow: 1px 2px 2px white;
 }
 
 .mensagem-white {
-  font-size: 20px;
+  font-size: 30px;
   color: white;
-  text-shadow: #0b1284;
+  text-shadow: 1px 2px 2px  #0b1284;
 }
 
 .mensagem-azul {
-  font-size: 20px;
+  font-size: 30px;
   color: rgb(141, 159, 192);
+  text-shadow: 1px 2px 2px white;
+}
+
+.mensagem-yellow {
+  font-size: 30px;
+  color: yellow;
+  text-shadow: 1px 2px 2px white;
 }
 
 @keyframes blink {
-  0% { opacity: 1; }
-  50% { opacity: 0; }
-  100% { opacity: 1; }
+  0% { opacity: 1; color:#760ea1}
+  50% { opacity: 0; color:#c9f054}
+  100% { opacity: 1; color:#840b2a}  
+  0% { opacity: 1; color:#f0ff00}
+  50% { opacity: 0; color:#ff0000}
+  100% { opacity: 1; color:#00ff00}
+  0% { opacity: 0; color:#0000ff}
+  50% { opacity: 1; color:#ff00ff}
+  100% { opacity: 0; color:#00ffff}
+  0% { opacity: 1; color:#800000}
+  50% { opacity: 0; color: #f0f0}
+  100% { opacity: 1; color:#808000}
 }
 
-.mensagem-piscar {
-  animation: blink 1s infinite;
+.blink {
+  animation: blink 4s 3s infinite;
 }
 
 #t-jogo {
@@ -342,7 +360,7 @@ h4, ol, ul, li {
   margin-left: 2px;
   border-radius: 30px;
   width: 100px;
-  height: 200px; 
+  height: 300px; 
   font-size: 20px;
 }
 
@@ -350,11 +368,16 @@ h4, ol, ul, li {
   align-items: column;
   font-size: 15px;
   width: 100px;
-  height: 100px;
+  height: 300px;
   border-radius: 20px;
 }
 
 .msgDiv {
-  font-size: 15px;
+  font-size: 20px;
   border-radius: 20px;
+}
+
+#t-jogo{
+  font-size: 20px;
+  width: 80%;
 }
