--- a/estilos/comuns.css
+++ b/estilos/comuns.css
@@ -1,8 +1,39 @@
+/* Configurações gerais */
+body {
+    font-size: 14px; /* Usando rem para ajustar com base no tamanho da fonte raiz */
+    margin-bottom: 2px;
+    margin-top: 1px;
+    font-family: Arial, sans-serif;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    background-image: linear-gradient(rgb(231, 72, 231), white);
+    background-clip: padding-box;
+    padding: 5px;
+    overflow: hidden;
+    line-height: 1.6;
+}
+
+body::before {
+  content: "";
+  background-image: url("../imagens/Logo.png");
+  background-size: cover;
+  background-position: center;
+  background-repeat: no-repeat;
+  opacity: 0.4;
+  position: absolute;
+  margin: auto;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  z-index: -1; /* Coloca a imagem atrás do conteúdo */
+}
 
 /* Ajuste de zoom para 50% */
 @media (max-width: 1200px) {
   body {
-    zoom: 0.5;
+  zoom: 0.5;
   }
 }
 
@@ -11,6 +42,26 @@
   body {
     zoom: 1;
   }
+}
+
+main {
+  width: 100%;
+  background-color: transparent; /* Cor de fundo */
+  padding: 10px; /* Espaçamento interno */
+  height: 90%; /* Ajusta a altura mínima para ocupar a tela inteira menos a altura do rodapé */
+  box-sizing: border-box; /* Inclui padding e borda no cálculo da altura */
+  background-repeat: no-repeat;
+}
+
+/* Ajuste de zoom para 50% */
+@media (max-width: 1200px) { 
+main {
+  background-color: transparent; /* Cor de fundo */
+  padding: 10px; /* Espaçamento interno */
+  height: 89%; /* Ajusta a altura mínima para ocupar a tela inteira menos a altura do rodapé */
+  box-sizing: border-box; /* Inclui padding e borda no cálculo da altura */
+  background-repeat: no-repeat;
+}
 }
 
 /* Ajuste de zoom para 50% */
@@ -52,22 +103,6 @@
 }
 
 /* Ajuste de zoom para 50% */
-@media (max-width: 1200px) {  
-  #img {
-    width: 100%;
-    height: 100%;
-  }
-}
-
-/* Ajuste de zoom para 100% */
-@media (min-width: 1201px) { 
-  #img {
-    width: 100%;
-    height: 100%;
-  }
-}
-
-/* Ajuste de zoom para 50% */
 @media (max-width: 1200px) {   
   #i2 {
     padding-bottom: 15px;
@@ -84,52 +119,6 @@
     width: 50%;
     height: 70%;
     margin-top: 20rem;
-  }
-}
-
-/* Ajuste de zoom para 50% */
-@media (max-width: 1200px) {
-  footer {
-    margin-top: 1px;
-    font-size: 35px;
-    zoom: 0.5;
-  }
-}
-
-/* Ajuste de zoom para 100% */
-@media (min-width: 1201px) {
-  footer {
-    margin-top: 1px;
-    margin-bottom: 20px;
-    font-size: 20px;
-    zoom: 1;
-  }
-}
-
-/* Controles */
-/* Ajuste de zoom para 50% */
-@media (max-width: 1200px) {
-.controls2 {
-  display: flex;
-  flex-direction: row;
-  align-items: flex-start;
-  margin-top: auto;
-  margin-left: 1.5625rem;
-  margin-right: 1.5625rem;
-  padding: 0.625rem;
-  border: solid outset 0.3125rem #ccc;
-  background-color: transparent;
-}
-}
-
-/* Ajuste de zoom para 100% */
-@media (min-width: 1201px) {
-  .controls2 {
-    margin: 100%;
-    align-items: center;
-    flex-direction: line;
-    margin-left: 0.625rem;
-    margin-right: 0.625rem;
   }
 }
 
@@ -155,6 +144,33 @@
   );
   color: white;
   transition: 0.2s;
+  box-shadow:12px 15px 5px black;
+}
+/* Controles */
+/* Ajuste de zoom para 50% */
+@media (max-width: 1200px) {
+.controls2 {
+  display: flex;
+  flex-direction: row;
+  align-items: flex-start;
+  margin-top: auto;
+  margin-left: 1.5625rem;
+  margin-right: 1.5625rem;
+  padding: 0.625rem;
+  border: solid outset 0.3125rem #ccc;
+  background-color: transparent;
+}
+}
+
+/* Ajuste de zoom para 100% */
+@media (min-width: 1201px) {
+.controls2 {
+    margin: 100%;
+    align-items: center;
+    flex-direction: line;
+    margin-left: 0.625rem;
+    margin-right: 0.625rem;
+  }
 }
 
 .controls2 button:hover {
@@ -169,7 +185,8 @@
 /* Texto especial */
 #tbem {
   margin: 0.3125rem;
-  font-size: 1.5rem;
+  font-size: 16px;
+  align-items: center;
   text-align: center;
   color: transparent;
   background-clip: text;
@@ -188,23 +205,6 @@
     #ef0a0a 100%
   );
   text-shadow: 0.125rem 0.125rem 0.25rem rgba(0, 0, 0, 0.5);
-}
-
-body {
-  margin-bottom: 2px;
-  margin-top: 2px;
-  font-family: Arial, sans-serif;
-  display: flex;
-  flex-direction: column;
-  margin-left: 50px;
-  margin-right: 50px;
-  align-items: center;
-  background-image: linear-gradient(rgb(231, 72, 231), white);
-  background-clip: padding-box;
-  padding: 5px;
-  overflow: hidden;
-  height: 100vh;
-  line-height: 1.6;
 }
 
 header {
@@ -277,8 +277,11 @@ header {
 }
 
 footer {
-  margin-top: 2px;
-  margin-bottom: 40px;
+      
+  width: 100%;
+  position: relative; /* Posição relativa */
+  bottom: 10; /* Alinha o rodapé ao fundo */
+  text-align: center;
   padding: 2px;
   background: radial-gradient(
         rgba(255, 255, 255, 0) 0,
@@ -339,7 +342,6 @@ footer {
   background-color: #840b2a;
   background-blend-mode: overlay;
   color: white;
-  width: 100%;
 }
 
 footer:hover {
@@ -349,32 +351,23 @@ footer:hover {
   border-radius: 10%;
 }
 
-fieldset#credits {
-  margin-top: 10px;
-  padding: 5px;
-  border: 1px transparent #ccc;
-  border-radius: 5px;
+/* Ajuste de zoom para 50% */
+@media (max-width: 1200px) {
+  footer {
+    margin-top: 10px;
+    font-size: 35px;
+    zoom: 0.5;
+  }
 }
 
-fieldset#credits legend {
-  padding: 0 10px;
-  font-weight: bold;
-}
-
-footer fieldset {
-  margin: 0;
-  padding: 0;
-  border: none;
-  text-align: center;
-}
-
-footer fieldset legend {
-  display: none;
-}
-
-footer fieldset p {
-  margin: 0;
-  padding: 0;
+/* Ajuste de zoom para 100% */
+@media (min-width: 1201px) {
+  footer {
+    margin-top: 1px;
+    margin-bottom: 20px;
+    font-size: 20px;
+    zoom: 1;
+  }
 }
 
 legend {
@@ -392,13 +385,9 @@ legend {
   height: 30px;
 }
 
-#face {
-  width: 60%;
-  height: 60%;
-  display: flex;
-}
-
 h1 {
+  
+  width: 90%;
   margin-top: 1px;
   font-size: 38px;
   padding: 2px;
