--- a/estilos/comuns.css
+++ b/estilos/comuns.css
@@ -30,21 +30,24 @@ body::before {
   z-index: -1; /* Coloca a imagem atrás do conteúdo */
 }
 
-/* Ajuste de zoom para 50% */
+/* Zoom de 50% */
 @media (max-width: 1200px) {
   body {
-  zoom: 0.5;
+    margin: 5px;
+      zoom: 0.5;
   }
 }
 
 /* Ajuste de zoom para 100% */
 @media (min-width: 1201px) {
   body {
-    zoom: 1;
+    margin: 5px;
+    zoom: 0.47;
   }
 }
 
 main {
+  margin: 10px auto;
   width: 100%;
   background-color: transparent; /* Cor de fundo */
   padding: 10px; /* Espaçamento interno */
@@ -57,7 +60,7 @@ main {
 @media (max-width: 1200px) { 
 main {
   background-color: transparent; /* Cor de fundo */
-  padding: 10px; /* Espaçamento interno */
+  padding: 10px auto; /* Espaçamento interno */
   height: 89%; /* Ajusta a altura mínima para ocupar a tela inteira menos a altura do rodapé */
   box-sizing: border-box; /* Inclui padding e borda no cálculo da altura */
   background-repeat: no-repeat;
@@ -122,6 +125,79 @@ main {
   }
 }
 
+.corpo-i{
+  display: flex;
+  overflow: hidden; /* Remove a barra de rolagem */
+  flex-direction: column;
+  min-height: 100vh;
+  margin-top: 15px;
+  margin: 30px;
+  align-items: center;
+  text-align: center;
+  background-image: url('../imagens/Logo.png'); /* Caminho para a imagem */
+  background-size: cover;
+  background-position: center; /* Centraliza a imagem */
+  background-repeat: no-repeat; /* Evita que a imagem se repita */
+}
+
+/*Ajuste para zoom de 50%*/
+@media (max-width: 1200px) {
+.corpo-i { 
+      background-size: 100% 118%;
+  }    
+}
+
+/*Ajuste para zoom de 100%*/
+@media (min-width: 1201px) {    
+.corpo-i{
+      background-size: 100% 260%;
+  }
+}
+
+.controles {
+  width: 970px;
+  height: 150px;
+  display: flex;
+  flex-direction: row; /* Correção da direção */
+  align-items: flex-start;
+  margin: 40px auto;
+  padding: 20px auto;
+  background-color: transparent;
+  box-shadow: #000 25px 20px 20px;
+  border-radius: 10px;
+}
+
+.controles button {  
+  border: outset 10px rgb(168, 168, 223);
+  padding: 10px 10px;
+  width: 280px;
+  height: 90px;
+  border-radius: 10px;
+  margin: 20px auto;
+  font-size: 30px;
+  font-weight: bold; /* Ajuste para negrito */
+  background: linear-gradient(
+  45deg,
+  #006782 8%,
+  #0b1284 10%,
+  #760ea1 27%,
+  #83096e 75%,
+  #f8f7f5 100%
+);
+box-shadow: 25px 20px 20px rgba(0, 0, 0, 0.9);
+transition: 0.2s;
+color: white;
+}
+
+.controles button:hover {    
+  background-color: lightseagreen;
+  transform: scale(1.1);
+}
+
+.controles button:active {
+  transform: scale(0.95);
+}
+
 .controls2 button {
   width: 11.25rem;
   height: 2.5rem;
@@ -182,38 +258,13 @@ main {
   transform: scale(0.95);
 }
 
-/* Texto especial */
-#tbem {
-  margin: 0.3125rem;
-  font-size: 16px;
-  align-items: center;
-  text-align: center;
-  color: transparent;
-  background-clip: text;
-  background-color: hsl(34, 53%, 82%);
-  background-image: repeating-linear-gradient(
-    45deg,
-    #d7dd60 0%,
-    #e4f52a 20%,
-    #f3a322 30%,
-    #f5511b 40%,
-    #230f07 50%,
-    #37094a 60%,
-    #83096e 70%,
-    #840b2a 80%,
-    #623c59 90%,
-    #ef0a0a 100%
-  );
-  text-shadow: 0.125rem 0.125rem 0.25rem rgba(0, 0, 0, 0.5);
-}
-
 header {
-  margin-top: 1px;
-  margin-bottom: 15px;
-  padding: 2px;
+  top: 0px;
+  position: absolute;
+  padding: 10px;
   text-align: center;
   width: 100%;
-  height: 70px;
+  font-size: 55px;
   color: #ccc;
   box-shadow: inset 0 0 10px #000;
   background: radial-gradient(
@@ -276,13 +327,13 @@ header {
   background-blend-mode: overlay;
 }
 
-footer {
-      
+footer {        
   width: 100%;
-  position: relative; /* Posição relativa */
-  bottom: 10; /* Alinha o rodapé ao fundo */
+  position: absolute; /* Posição relativa */
+  bottom: 1px; /* Alinha o rodapé ao fundo */
   text-align: center;
-  padding: 2px;
+  font-size: 35px;
+  padding: 12px;
   background: radial-gradient(
         rgba(255, 255, 255, 0) 0,
         rgba(255, 255, 255, 0.15) 30%,
@@ -346,50 +397,33 @@ footer {
 
 footer:hover {
   transform: scale(1.1);
-  box-shadow: 0 30px 30px rgba(255, 255, 255, 1);
+  box-shadow: inset 1px 30px 30px rgba(255, 255, 255, 1);
   animation: spin 5s linear infinite;
   border-radius: 10%;
 }
 
 /* Ajuste de zoom para 50% */
 @media (max-width: 1200px) {
-  footer {
-    margin-top: 10px;
-    font-size: 35px;
-    zoom: 0.5;
-  }
+.p1, .p2, img, #corpo3{ 
+  margin: 8px auto; 
+  padding: 20px auto;
+  font-size: 75px;
+  zoom: 0.55;
+}
 }
 
 /* Ajuste de zoom para 100% */
 @media (min-width: 1201px) {
-  footer {
-    margin-top: 1px;
-    margin-bottom: 20px;
-    font-size: 20px;
+footer, .corpo3, .controles {
+    font-size: 45px;
     zoom: 1;
   }
 }
 
-legend {
-  color: yellow;
-  font-size: 18px;
-  filter: drop-shadow(0 2px 5px white);
-}
-
-.paint-button .icon {
-  margin: 2px;
-  padding-top: 0px;
-  padding-right: 25px;
-  padding-left: 5px;
-  width: 30px;
-  height: 30px;
-}
-
-h1 {
-  
-  width: 90%;
-  margin-top: 1px;
-  font-size: 38px;
+h1 {  
+  width: 100%;
+  margin: 2px auto;
+  font-size: 80px;
   padding: 2px;
   color: white;
   filter: drop-shadow(10px 10px 2px gray);
@@ -400,5 +434,167 @@ h1:hover {
   box-shadow: 0 30px 30px rgba(255, 255, 255, 1);
   animation: spin 5s linear infinite;
   border-radius: 40%;
+}
+
+/* Texto especial */
+#tbem {
+  margin: 30px auto;
+  font-size: 60px;
+  text-align: center;
+  color: transparent;
+  background-clip: text;
+  background-color: hsl(34, 53%, 82%);
+  background-image: repeating-linear-gradient(
+    45deg,
+    #ffff 10%,
+    #2746aa 20%,
+    #2d2950 30%,
+    #10495a 40%,
+    #6314f7 50%,
+    #37094a 60%,
+    #310329 70%,
+    #250417 80%,
+    #022330 90%,
+  );
+  text-shadow: 3px 3px 6px rgba(0, 0, 0, 0.9), 
+                       6px 5px 0 rgba(0, 0, 0, 0.4);
+}
+
+#tbem:hover {
+  transform: scale(1.1);
+  text-shadow: 0 0.3125rem 0.3125rem rgb(32, 7, 7);
+  animation: spin 5s linear infinite;
+}
+
+p {
+text-align: justify;
+margin: 20px auto;
+font-size: 40px;
+padding: 5px 55px 2px;
+font-style: bold;
+line-height: 1.5;
+}
+
+#corpo3 {
+  margin: 5px auto;
+  width: 1200px;
+  padding: 10px auto;
+  position: relative;
+  height: 970px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  text-align: center;
+  background-color: rgba(10, 2, 2, 0.4);
+  border: 3px solid red;
+  border-radius: 10px;
+  color: white;
+}
+
+#corpo3:hover {
+transform: scale(1.2);
+width: 1600px;
+height: 850px;
+border: 20px double #f4f3f8;
+padding-inline: 20px;
+background: radial-gradient(
+      rgba(255, 255, 255, 0) 0,
+      rgba(255, 255, 255, 0.15) 30%,
+      rgba(236, 235, 235, 0.3) 32%,
+      rgba(255, 255, 255, 0) 33%
+    )
+    0 0,
+  radial-gradient(
+      rgba(255, 255, 255, 0) 0,
+      rgba(255, 255, 255, 0.1) 11%,
+      rgba(255, 255, 255, 0.3) 13%,
+      rgba(255, 255, 255, 0) 14%
+    )
+    0 0,
+  radial-gradient(
+      rgba(255, 255, 255, 0) 0,
+      rgba(255, 255, 255, 0.2) 17%,
+      rgba(255, 255, 255, 0.43) 19%,
+      rgba(255, 255, 255, 0) 20%
+    )
+    0 110px,
+  radial-gradient(
+      rgba(255, 255, 255, 0) 0,
+      rgba(255, 255, 255, 0.2) 11%,
+      rgba(255, 255, 255, 0.4) 13%,
+      rgba(255, 255, 255, 0) 14%
+    ) -130px -170px,
+  radial-gradient(
+      rgba(255, 255, 255, 0) 0,
+      rgba(255, 255, 255, 0.2) 11%,
+      rgba(255, 255, 255, 0.4) 13%,
+      rgba(255, 255, 255, 0) 14%
+    )
+    130px 370px,
+  radial-gradient(
+      rgba(255, 255, 255, 0) 0,
+      rgba(255, 255, 255, 0.1) 11%,
+      rgba(255, 255, 255, 0.2) 13%,
+      rgba(255, 255, 255, 0) 14%
+    )
+    0 0,
+  linear-gradient(
+    45deg,
+    #343702 0%,
+    #184500 20%,
+    #187546 30%,
+    #006782 40%,
+    #0b1284 50%,
+    #760ea1 60%,
+    #83096e 70%,
+    #840b2a 80%,
+    #b13e12 90%,
+    #e27412 100%
+  );
+background-size: 470px 470px, 970px 970px, 410px 410px, 610px 610px,
+  530px 530px, 730px 730px, 100% 100%;
+background-color: #840b2a;
+background-blend-mode: overlay;
+animation: spin 5s linear infinite;
+}
+
+section {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  margin: 20px auto;
+  padding: 15px auto;
+}
+
+img {
+  width: 400px;
+  height: auto;
+  margin: 20px 20px 30px;
+  border-radius: 40px;
+  border: 20px double #040111;
+}
+
+#cil{
+width: 390px;
+height: 390px;
+} 
+
+img:hover {
+border: inset 20px #f8f7f5;
+transform: scale(1.1);
+margin: 20px 20px 30px;
+filter: invert(999%) sepia(0%) saturate(5%) hue-rotate(270deg); 
+box-shadow: #000 25px 20px 15px;
+animation: spin 5s linear infinite;
+}
+
+table, td, th {
+  margin: 100px;
+  height: 740px;
+  padding: 5px;
+  border-collapse: separate;
+  
+  border: #0b0e52 solid 5px;
+  border-radius: 10px;
 }
 
