--- a/estilos/indice.css
+++ b/estilos/indice.css
@@ -6,7 +6,7 @@
   border-radius: 10px;
 }
 
-.table1, td, th {
+.table1, td, tr {
   margin: 100px;
   height: 740px;
   padding: 5px;
@@ -108,18 +108,18 @@
 /* Ajuste de zoom para 50% */
 @media (max-width: 1200px) {
   .table1, .tr, .corpo3 {
-    border-spacing: 120px 120px;
+    border-spacing: 250px 120px;
     transform: scale(0.5); /* Ajustado para 50% */
     transform-origin: top;
   }
   .table-indice{
-    border-spacing: 120px 100px;
+    border-spacing: 50px 150px;
     transform: scale(1.3); /* Aumenta o tamanho das imagens */
     transform-origin: center;
   }
 
   .imagens-indice img {
-    transform: scale(1.8); /* Aumenta o tamanho das imagens */
+    transform: scale(1.89); /* Aumenta o tamanho das imagens */
     transform-origin: center;
   }
 
@@ -127,14 +127,25 @@
 
 /* Ajuste de zoom para 100% */
 @media (min-width: 1201px) {
-  .corpo3 {
+  .corpo3{
     transform: scale(1); /* Ajustado para 100% */
     transform-origin: center;
-  }
+    }
+
+  .ind-controles, #ind-contoles {
+      top: 970px;
+      padding-bottom: 200px;
+      width: 100%;
+      position: relative;
+      transform: scale(1); /* Ajustado para 100% */
+      margin-left: 1000px;
+    }
+    
   .imagens-indice img {
     transform: scale(1); /* Mantém o tamanho original das imagens */
     transform-origin: center;
   }
+
 }
 
 /* Texto especial */
@@ -179,3 +190,72 @@
   font-size: 40px;
   text-shadow: 1px 2px 3px #2746aa;
 }
+
+.ind-controles {
+  bottom: 200px;
+  width: 1300px;
+  height: 150px;
+  position: absolute;
+  display: flex;
+  flex-direction: row; /* Correção da direção */
+  align-items: flex-start;
+  bottom: 100px;
+  padding: 10px auto;
+  background-color: transparent;
+}
+
+.ind-controles button {  
+  border: outset 10px rgb(168, 168, 223);
+  padding: 10px;
+  width: 280px;
+  height: 90px;
+  border-radius: 10px;
+  margin: 10px auto;
+  font-size: 30px;
+  font-weight: bold; /* Ajuste para negrito */
+  background: linear-gradient(
+  45deg,
+  #006782 8%,
+  #0b1284 10%,
+  #760ea1 27%,
+  #83096e 75%,
+  #f8f7f5 100%
+);
+box-shadow: 25px 20px 20px rgba(0, 0, 0, 0.9);
+transition: 0.2s;
+color: white;
+}
+
+.ind-controles button:hover {    
+  background-color: lightseagreen;
+  transform: scale(1.1);
+}
+
+.ind-controles button:active {
+  transform: scale(0.95);
+}
+
+#ind-controles {
+  width: 1140px;
+  height: 110px;
+  margin-left: 35px;
+  position: absolute;
+  display: flex;
+  flex-direction: row; /* Correção da direção */
+  align-items: flex-start;
+  bottom: 200px;
+  padding: 30px auto;
+  background-color: transparent;
+  box-shadow: #000 25px 20px 20px;
+  border-radius: 10px;
+}
+
+#ind-controles:hover {   
+  width: 80%; 
+  margin-left: 75px;
+  background-color: lightseagreen;
+  box-shadow: inset 20px 50px 50px darkblue;
+  box-shadow: outset 20px 50px 50px rgb(0, 0, 7);
+  transform: scale(1.1);
+}
+
