--- a/estilos/indice.css
+++ b/estilos/indice.css
@@ -88,12 +88,12 @@
       #92ee61 20%,
       #c4b05b 30%,
       #2fcf72 40%,
-      #0b0e52 50%,
-      #2e103b 60%,
-      #380530 70%,
+      #8ce4f4 50%,
+      #d7abea 60%,
+      #f5aeea 70%,
       #eb4c4c 80%,
-      #441215 90%,
-      #130901 10%
+      #f2a1a6 90%,
+      #f0b17d 10%
     );
   background-size: 470px 470px, 970px 970px, 410px 410px, 610px 610px,
     530px 530px, 730px 730px, 100% 100%;
