--- a/estilos/fase1.css
+++ b/estilos/fase1.css
@@ -6,7 +6,7 @@ body {
   display: flex;
   flex-direction: column;
   align-items: center;
-  background-image: linear-gradient(rgb(231, 72, 231), white);
+  background-image: transparent;
   background-clip: padding-box;
   padding: 5px;
   overflow: hidden;
@@ -19,9 +19,10 @@ background-image: url("../imagens/Logo.png");
 background-size: cover;
 background-position: center;
 background-repeat: no-repeat;
-opacity: 0.4;
+opacity: 0.3;
 position: absolute;
 margin: auto;
+justify-content: center;
 top: 0;
 left: 0;
 width: 100%;
@@ -45,9 +46,9 @@ z-index: -1; /* Coloca a imagem atrás do conteúdo */
 
 /* Container do jogo */
 #game-container {
-  top: 25px;
+  top: 20px;
   display: flex;
-  flex-direction: row;
+  bottom: 10px;
 }
 
 /* Ajuste de zoom para 50% */
@@ -62,7 +63,8 @@ z-index: -1; /* Coloca a imagem atrás do conteúdo */
 /* Ajuste de zoom para 100% */
 @media (min-width: 1201px) {  
   #game-container {
-    margin-top: 70px;
+    transform: scale(0.98);
+    margin-top: 60px;
     position: absolute;
     flex-direction: line;
   }
@@ -79,10 +81,10 @@ z-index: -1; /* Coloca a imagem atrás do conteúdo */
 header {
   top: 0px;
   position: absolute;
-  padding: 8px;
+  padding: 2px;
   text-align: center;
   width: 100%;
-  font-size: 50px;
+  font-size: 40px;
   color: #ccc;
   box-shadow: inset 0 0 10px #000;
   background: radial-gradient(
@@ -151,7 +153,7 @@ footer {
   bottom: 0px; /* Alinha o rodapé ao fundo */
   text-align: center;
   font-size: 20px;
-  padding: 8px;
+  padding: 4px;
   background: radial-gradient(
         rgba(255, 255, 255, 0) 0,
         rgba(255, 255, 255, 0.15) 30%,
@@ -215,7 +217,7 @@ footer {
 
 footer:hover {
   transform: scale(1.1);
-  box-shadow: inset 1px 30px 30px rgba(255, 255, 255, 1);
+  box-shadow: inset 1px 10px 10px rgba(255, 255, 255, 1);
   animation: spin 5s linear infinite;
   border-radius: 10%;
 }
