--- a/estilos/instrucoes.css
+++ b/estilos/instrucoes.css
@@ -177,7 +177,7 @@
 @media (min-width: 1201px) {
  .contoles-ins {
         position: absolute;
-        bottom: 120px;
+        bottom: 150px;
         width: 30%;
         margin-left: 950px;
         align-items: center;
@@ -196,16 +196,11 @@
     
 /* Ajuste de zoom para 100% */
 @media (min-width: 1201px) {
-#corpo{
-    width: 100%;
-    margin-top: 1px;
-    font-size: 45px;
-    zoom: 0.66;
+    #corpo4, .contole_ins, .fase-1, .b-ins, #tbem { 
+          font-size: 120px;
+          zoom: 0.63;
+          line-height: 2;
+        }
     }
-
-    #corpo4:hover {
-        top:10px;
-    }
- }
     
     
