--- a/estilos/index.css
+++ b/estilos/index.css
@@ -21,7 +21,7 @@ body {
   border: 1px solid #ccc;
   background-color: transparent;
   width: 33.125rem; /* Usando rem para largura */
-  height: 67vh;
+  height: 65vh;
 }
 
 /* Títulos */
@@ -51,8 +51,9 @@ h3 {
 h4,
 p {
   text-align: justify;
-  font-size: 0.875rem;
-  padding-left: 0.625rem;
+  font-size: 32px;
+  padding:60px;
+  line-height: 1.8;
 }
 
 li,
@@ -121,7 +122,7 @@ ol {
 /* Texto especial */
 #tbem {
   margin: 0.3125rem;
-  font-size: 1.5rem;
+  font-size: 46px;
   text-align: center;
   color: transparent;
   background-clip: text;
